--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<ul>
 	            <a href="index.html">HOME &emsp;</a> 
 	            <a href="campeonato.html">CAMPEONATO &emsp;</a>
-	            <a href="campeonato.html">PROJETO &emsp;</a>
+	            <a href="campeonato.html#projetos">PROJETO &emsp;</a>
             </ul>
 		</nav>
     </header>
