--- a/pag3.html
+++ b/pag3.html
@@ -123,24 +123,24 @@
         <div>
           <h1>Robô Sumô Arduino</h1>
           <h3>Descrição:</h3>
-          <p>Este projeto consiste na construção de um robô sumô autônomo utilizando placas Arduino e sensores infravermelhos para detecção do oponente e da borda da arena. O objetivo do robô é empurrar o adversário para fora da área de luta ou desativá-lo dentro do tempo regulamentar.</p>
+          <p>Este projeto consiste na construção de um robô sumô autônomo utilizando placas Arduino e sensores infravermelhos para detectar o oponente e a borda da arena. O objetivo principal do robô é empurrar o adversário para fora da área de luta ou desativá-lo dentro do tempo regulamentar.</p>
           <h3>Materiais necessários:</h3>
           <p>Placa Arduino (por exemplo, Arduino Uno)<br>
           Motor DC e rodas para locomoção<br>
           Sensores infravermelhos para detecção do oponente e da borda da arena<br>
           Chassi para o robô<br>
-          Bateria ou fonte de energia para alimentar o sistema<br>
+          Bateria ou fonte de energia<br>
           Componentes eletrônicos diversos (fios, resistores, capacitores, etc.)<br>
           Ferramentas para montagem (soldador, alicates, etc.)</p>
         </div>
       </div>
       <div class="cat"><h3>Passos básicos da montagem do chassi:</h3></div>
       <div class="cat">
-        <p>Monte o chassi do robô e fixe os motores DC e as rodas.<br>
-        <b>Conexão dos sensores:</b> Conecte os sensores infravermelhos à placa Arduino, garantindo que estejam posicionados de forma estratégica para detectar o oponente e a borda da arena.<br>
-        <b>Programação:</b> Escreva o código para controlar o robô, incluindo a lógica de detecção dos sensores, movimentação do robô e estratégias de ataque ao oponente.<br>
-        <b>Testes e ajustes:</b> Realize testes do robô na arena de sumô, fazendo ajustes no código conforme necessário para garantir um desempenho adequado.<br>
-        <b>Participação em competições:</b> Após a conclusão do projeto, o robô estará pronto para participar de competições de robô sumô, onde poderá enfrentar outros adversários e demonstrar suas habilidades.</p>
+        <p><b> Montagem do Chassi:</b>  Monte o chassi do robô e fixe os motores DC e as rodas.<br>
+        <b>Conexão dos sensores:</b>  Conecte os sensores infravermelhos à placa Arduino, posicionando-os estrategicamente para detectar oponentes e a borda da arena.<br>
+        <b>Programação:</b> Desenvolva o código para controlar o robô, incluindo lógica para detecção de sensores, movimentação e estratégias de ataque.<br>
+        <b>Testes e ajustes:</b> Realize testes na arena de sumô, ajustando o código conforme necessário para otimizar o desempenho.<br>
+        <b>Participação em competições:</b> Após a conclusão, o robô estará pronto para competições de robô sumô, demonstrando suas habilidades contra outros competidores.</p>
         <div class="carousel">
           <div class="carousel-container" id="carousel-container-1">
             <div class="carousel-item"><img src="projet1.webp" alt="Projeto 1 - Imagem 1"></div>
@@ -154,7 +154,7 @@
         <div>
             <h1>Robô Sumô Raspberry Pi</h1>
             <h3>Descrição:</h3>
-            <p>Neste projeto, vamos construir um robô sumô autônomo utilizando um Raspberry Pi como cérebro do robô. O Raspberry Pi será responsável por processar os dados dos sensores e controlar os motores para movimentação do robô. Usaremos sensores de distância para detectar o oponente e a borda da arena, e o objetivo do robô será empurrar o adversário para fora da área de luta ou desativá-lo dentro do tempo regulamentar.</p>
+            <p>Este projeto consiste na construção de um robô sumô autônomo utilizando um Raspberry Pi como cérebro do sistema. O objetivo principal do robô será detectar e empurrar o adversário para fora da arena ou desativá-lo dentro do tempo regulamentar. Para isso, o Raspberry Pi processará os dados dos sensores e controlará os motores para movimentação estratégica.</p>
             <h3>Materiais necessários:</h3>
             <p>Raspberry Pi (qualquer modelo compatível)<br>
             Placa de controle de motores para Raspberry Pi<br>
@@ -167,12 +167,12 @@
       </div>
       <div class="cat"><h3>Passos básicos da montagem do chassi:</h3></div>
       <div class="cat">
-        <p>Monte o chassi do robô e fixe os motores DC e as rodas.<br>
-        <b>Conexão dos sensores:</b> Conecte os sensores de distância ao Raspberry Pi, garantindo que estejam posicionados de forma estratégica para detectar o oponente e a borda da arena.<br>
+        <p><b>Montagem do Chassi:</b> Construa o chassi do robô e fixe os motores DC e as rodas.<br>
+        <b>Conexão dos sensores:</b> Conecte os sensores de distância ao Raspberry Pi, posicionando-os estrategicamente para detectar oponentes e a borda da arena.<br>
         <b>Instalação do sistema operacional:</b> Instale um sistema operacional compatível (como Raspbian) no Raspberry Pi.<br>
-        <b>Programação:</b> Escreva o código para controlar o robô, incluindo a lógica de detecção dos sensores, movimentação do robô e estratégias de ataque ao oponente.<br>
-        <b>Testes e ajustes:</b> Realize testes do robô na arena de sumô, fazendo ajustes no código conforme necessário para garantir um desempenho adequado.<br>
-        <b>Participação em competições:</b> Após a conclusão do projeto, o robô estará pronto para participar de competições de robô sumô, onde poderá enfrentar outros adversários e demonstrar suas habilidades.</p>
+        <b>Programação:</b>  Desenvolva o código para controlar o robô, incluindo lógica para detecção de sensores, movimentação e estratégias de ataque.<br>
+        <b>Testes e ajustes:</b> Realize testes na arena de sumô, ajustando o código conforme necessário para otimizar o desempenho.<br>
+        <b>Participação em competições:</b> Após a conclusão, o robô estará pronto para competições de robô sumô, demonstrando suas habilidades contra outros competidores.</p>
         <div class="carousel">
           <div class="carousel-container" id="carousel-container-2">
             <div class="carousel-item"><img src="pro2.webp" alt="Projeto 2 - Imagem 1"></div>
@@ -186,7 +186,7 @@
         <div>
             <h1>Robô Sumô Arduino com Taser</h1>
             <h3>Descrição:</h3>
-            <p>Este projeto consiste na construção de um robô sumô controlado utilizando placa Arduino e taser. O objetivo do robô é empurrar o adversário para fora da área de luta ou desativá-lo dentro do tempo regulamentar.</p>
+            <p>Este projeto foi desenvolvido como parte de uma matéria de extensão e consiste na construção de um robô sumô controlado por uma placa Arduino equipada com um taser. O objetivo principal do robô é empurrar o adversário para fora da área de luta ou desativá-lo dentro do tempo regulamentar.</p>
             <h3>Materiais necessários:</h3>
             <p>Placa Arduino Uno<br>
             Chassi de carrinho com motor DC e rodas<br>
@@ -199,11 +199,11 @@
       </div>
       <div class="cat"><h3>Passos básicos da montagem do chassi:</h3></div>
       <div class="cat">
-        <p>Pegue o chassi e fixe os motores DC e as rodas.<br>
-        <b>Conexão:</b> Conecte o taser à placa Arduino, garantindo que estejam posicionados de forma estratégica para atingir oponente.<br>
-        <b>Programação:</b> Escreva o código para controlar o robô, incluindo a lógica de ativação do taser via controle e estratégias de ataque ao oponente.<br>
-        <b>Testes e ajustes:</b> Realize testes do robô na arena de sumô, fazendo ajustes no código conforme necessário para garantir um desempenho adequado.<br>
-        <b>Participação em competições:</b> Após a conclusão do projeto, o robô estará pronto para participar de competições de robô sumô, onde poderá enfrentar outros adversários e demonstrar suas habilidades.</p>
+        <p><b>Montagem do Chassi:</b> Fixe os motores DC e as rodas no chassi.<br>
+        <b>Conexão:</b>  Conecte o taser à placa Arduino, posicionando-o estrategicamente para atingir o oponente.<br>
+        <b>Programação:</b>Desenvolva o código para controlar o robô, incluindo a lógica de ativação do taser via controle e estratégias de ataque.<br>
+        <b>Testes e ajustes:</b> Realize testes do robô na arena de sumô, ajustando o código conforme necessário para garantir um desempenho ideal.<br>
+        <b>Participação em competições:</b> Após a conclusão do projeto, o robô estará preparado para participar de competições de robô sumô, onde poderá enfrentar outros adversários e demonstrar suas habilidades.</p>
         <div class="carousel">
           <div class="carousel-container" id="carousel-container-3">
             <div class="carousel-item"><img src="proj3.jpeg" alt="Projeto 3 - Imagem 1"></div>
