--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
   </div>
 
   <div id="footer">
-    <div id="autor2">Luiz Gustavo Mazala</div>
+    <div id="autor2">Luiz Gustavo Mazala de Oliveira</div>
     <div>
       <button id="botao-pagina" onmousedown="iniciarAnimacao()">Click</button>
       <div id="linha-branca"></div>
     </div>
-    <div id="autor1">Thacielli Ferreira</div>
+    <div id="autor1">Thacielli Ferreira Pires</div>
   </div>
 
   <script>
