--- a/pag4.html
+++ b/pag4.html
@@ -131,15 +131,16 @@
       <h2>Extensão 2 / Extensão 6</h2>
       <h4>IFTM 2024</h4>
       <h3>Thacielli Ferreira Pires</h3>
-      <h3>Luiz Gustavo Mazala</h3>
+      <h3>Luiz Gustavo Mazala de Oliveira</h3>
     </div>
     <div class="img2">
       <!-- Carrossel de imagens -->
       <div class="carousel" id="projeto1">
         <div class="slides">
-          <div class="slide"><img src="imag1.jpg" alt="Imagem 1"></div>
-          <div class="slide"><img src="imag3.jpg" alt="Imagem 2"></div>
-          <div class="slide"><img src="proj38.jpeg" alt="Imagem 3"></div>
+          <div class="slide"><img src="proj38.jpeg" alt="Imagem 1"></div>
+          <div class="slide"><img src="proj33.jpeg" alt="Imagem 2"></div>
+          <div class="slide"><img src="proj37.jpeg" alt="Imagem 3"></div>
+          <div class="slide"><img src="proj331.jpeg" alt="Imagem 4"></div>
         </div>
           <button class="carousel-control prev" onclick="prevSlide()">&#8249;</button>
           <button class="carousel-control next" onclick="nextSlide(1)">&#8250;</button>
@@ -147,6 +148,7 @@
             <button class="carousel-indicator" onclick="currentSlide(1, 1)"></button>
             <button class="carousel-indicator" onclick="currentSlide(2, 1)"></button>
             <button class="carousel-indicator" onclick="currentSlide(3, 1)"></button>
+            <button class="carousel-indicator" onclick="currentSlide(4, 1)"></button>
           </div>
       </div>
     </div>
