--- a/pag3.html
+++ b/pag3.html
@@ -138,6 +138,11 @@
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
+    .pro{
+      color: #c3c3c3;
+      line-height: 1.5;
+      font-weight: bold;
+    }
     #botao-pagina {
         margin-top: 19px;
         background-color: #fbb2b200;
@@ -198,6 +203,7 @@
           </div>
         </div>
       </div>
+      <a class="pro" href="https://blog.eletrogate.com/como-montar-e-programar-um-robo-lutador-de-sumo/">Link do Projeto Arduino</a>
     </div>
     <div id="projeto2" class="projeto">
       <div class="cat">
@@ -236,6 +242,7 @@
           </div>
         </div>
       </div>
+      <a class="pro" href="https://embarcados.com.br/mini-robo-com-camera-e-raspberry-pi-zero-w/">Link do Projeto Raspberry</a>
     </div>
     <div id="projeto3" class="projeto">
       <div class="cat">
@@ -399,7 +406,7 @@
       clearTimeout(timers[numero - 1]);
       showSlides(numero);
     }
-
   </script>
+
 </body>
 </html>
