--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       justify-content: space-between;
       min-height: 100vh;
       cursor: none;
-      background: radial-gradient(circle at var(--x) var(--y), rgba(255, 255, 255, 0.6) -34%, rgba(0, 0, 0, 0.95) 82%);
+      background: radial-gradient(circle at var(--x) var(--y), rgb(188 226 246 / 60%) -34%, rgba(0, 0, 0, 0.95) 82%);
     }
     #container {
       display: flex;
@@ -152,7 +152,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      font-size: 21px;
+      font-size: 22px;
       text-align: center;
     }
 
@@ -189,11 +189,13 @@
       right: 0;
     }
     #autor2 {
+      font-size: 18px;
       position: absolute;
       bottom: 20px;
       right: 138px;
     }
     #autor1 {
+      font-size: 18px;
       position: absolute;
       bottom: 20px;
       left: 67px;
@@ -201,12 +203,12 @@
     #botao-pagina {
       margin-right: 100px;
       background-color: #fbb2b200;
-      color: #9a9595;
+      color: #d1d1d1;
       padding: 10px 20px;
       text-align: center;
       text-decoration: none;
       display: inline-block;
-      font-size: 16px;
+      font-size: 17px;
       cursor: pointer;
       border: none;
       border-radius: 5px;
@@ -247,7 +249,7 @@
       </div>
     </div>
     <h1 class="test elemento">Robô Sumô</h1>
-    <span class="texto-central elemento">Amplified Avenger<br><br>IFTM 2024</span>
+    <span class="texto-central elemento"><b>Amplified Avenger</b><br><br>IFTM 2024</span>
   </div>
 
   <div id="footer">
