--- a/pag4.html
+++ b/pag4.html
@@ -61,7 +61,8 @@
     .carousel {
       position: relative;
       overflow: hidden;
-      width: 100%;
+      width: 70%;
+      margin-left: 157px;
       margin-top: 20px;
     }
 
