--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
   </div>
 
   <div id="footer">
-    <div id="autor2">Luiz Gustavo Mazala de Oliveira</div>
+    <!-- <div id="autor2">Luiz Gustavo Mazala de Oliveira</div>-->
     <div>
       <button id="botao-pagina" onmousedown="iniciarAnimacao()">Click</button>
       <div id="linha-branca"></div>
